--- a/cyclope/locale/es/LC_MESSAGES/django.po
+++ b/cyclope/locale/es/LC_MESSAGES/django.po
@@ -247,8 +247,8 @@ msgid "Newsletter Teaser (150x150px)"
 msgstr "Newsletter Teaser (150x150px)"
 
 #: default_settings.py:221
-msgid "Carrousel Bootstrap"
-msgstr ""
+msgid "Carousel Bootstrap"
+msgstr "Carousel Bootstrap"
 
 #: default_settings.py:223
 msgid "Labeled Bootstrap"
@@ -2226,7 +2226,7 @@ msgid "slideshow of Category members"
 msgstr "rotador de los miembros de la Categoría"
 
 #: core/collections/frontend_views.py:306
-msgid "carrousel view of Category members."
+msgid "carousel view of Category members."
 msgstr ""
 "Vista en carrusel de miembros de una Categoría."
 
@@ -2316,11 +2316,11 @@ msgstr "Editar"
 msgid "You may order the contents of this Category. Dont forget to save!"
 msgstr "Puedes ordenar los contenidos de esta Categoría. No olvides guardar!"
 
-#: core/collections/templates/collections/category_carrousel.html:50
+#: core/collections/templates/collections/category_carousel.html:50
 msgid "Previous"
 msgstr "Anterior"
 
-#: core/collections/templates/collections/category_carrousel.html:54
+#: core/collections/templates/collections/category_carousel.html:54
 msgid "Next"
 msgstr "Siguiente"
 
