correct translations in empty carruselcorrect translations in empty carrousel

--- a/cyclope/locale/es/LC_MESSAGES/django.po
+++ b/cyclope/locale/es/LC_MESSAGES/django.po
@@ -2479,11 +2479,16 @@ msgstr "Categoría vacía"
 #, python-format
 msgid ""
 "\n"
-"                        La categoría <em>%(cat_name)s</em> está vacía. <br/>\n"
-"                        Este <strong>carrusel</strong> mostrará aquí las"
-"imágenes de los contenidos que categorices en ella.\n"
+"                        The category <em>%(cat_name)s</em> is empty. <br/>\n"
+"                        This <strong>slider</strong> will show here the "
+"images of the contents you categorize for it.\n"
 "                    "
 msgstr ""
+"\n"
+"                        La categoría <em>%(cat_name)s</em> está vacía. <br/>\n"
+"                        Este <strong>carrusel</strong> mostrará aquí las "
+"imágenes de los contenidos que categorices en ella.\n"
+"                    "
 
 #: core/collections/templates/collections/category_list_as_forum.html:11
 msgid "Create a new topic"
