Madre por Padre en i18n Esta es la unico en Cyclope, hay más en Django? issue #45

--- a/cyclope/locale/es/LC_MESSAGES/django.po
+++ b/cyclope/locale/es/LC_MESSAGES/django.po
@@ -268,7 +268,7 @@ msgstr "Contenido"
 
 #: forms.py:128 core/collections/admin.py:83
 msgid "Parent"
-msgstr "Padre"
+msgstr "Madre"
 
 #: forms.py:130 forms.py:281 core/collections/admin.py:175
 #: core/frontend/sites.py:384
